[package]
name = "blogworm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
url = "2.2"
reqwest = { version = "0.11", features = ["json"] }
colored = "2"
log = "0.4.14"
tokio = {version = "1", features = ["full"]}
scraper = "0.12"
futures = "0.3"
lazy_static = "1.4"
dirs = "5.0"
chrono = "^0.4.23"
indicatif = "0.17.1"
regex = "1.3.7"
console = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
